tests/export_default/export_default.exp
Error: test.js:3
  3: N.x = M(N.x);
           ^^^^^^ string [1] is incompatible with number [2].
  References:
    3: N.x = M(N.x);
             ^^^^^^ [1]: string
    3: N.x = M(N.x);
       ^^^ [2]: number

Error: test.js:3
  3: N.x = M(N.x);
             ^^^ number. This type is incompatible with the expected param type of
  2:     declare module.exports: (x: string) => string;
                                     ^^^^^^ string. See lib: lib/lib.js:2

Error: test.js:5
  5: N.y = P(N.y);
           ^^^^^^ string [1] is incompatible with number [2].
  References:
    5: N.y = P(N.y);
             ^^^^^^ [1]: string
    5: N.y = P(N.y);
       ^^^ [2]: number

Error: test.js:5
  5: N.y = P(N.y);
             ^^^ number. This type is incompatible with the expected param type of
  2:     declare module.exports: (x: string) => string;
                                     ^^^^^^ string. See lib: lib/lib.js:2

Error: test.js:7
  7: N.z = Q(N.z);
           ^^^^^^ string [1] is incompatible with number [2].
  References:
    7: N.z = Q(N.z);
             ^^^^^^ [1]: string
    7: N.z = Q(N.z);
       ^^^ [2]: number

Error: test.js:7
  7: N.z = Q(N.z);
             ^^^ number. This type is incompatible with the expected param type of
  2:     declare module.exports: (x: string) => string;
                                     ^^^^^^ string. See lib: lib/lib.js:2


Found 6 errors
